graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_and_fragments_multiple.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1
}
fragment MyFragment on SomeType {
  field2
}
fragment YourFragment on AnotherType {
  field3
}
