graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_nested_fields.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
{
  field1 {
    field12 {
      field13
    }
  }
  field2
}
