graphql-toolkit-writer/tests/snapshots/it_fmt_pretty_exec_document__query_with_directive.snap
---
source: graphql-toolkit/tests/it_ser_pretty_formatter_query.rs
expression: query
---
query @include(if: true) {
  field
}
